feat: implement PDF generation, vehicle management enhancements, search improvements, UI refinements, and stability fixes